<resources>
    <string name="app_name">Drunk Or Not</string>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_alcohol_choose" translatable="false">AlcoholChooseActivity</string>
    <string name="title_activity_next" translatable="false">NextActivity</string>
    <string name="title_activity_sensor" translatable="false">SensorActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="str_empty" translatable="false"></string>
    <string name="str_enterDeviceIP" translatable="true">Enter device IP</string>
    <string name="str_enterAlcoholIntake" translatable="true">Enter alcohol intake in [g]:</string>
    <string name="str_enterMass" translatable="true">Enter your mass</string>
    <string name="str_selectSex" translatable="true">Select your biological sex</string>
    <string name="str_btnStartSensor" translatable="true">Start Sensor</string>
    <string name="str_btnFetchData" translatable="true">Fetch Data</string>
    <string name="str_btnManual" translatable="true">Confirm value</string>
    <string name="str_btnSensor" translatable="true">Use Sensor</string>
    <string name="str_btnSelectAlcohol" translatable="true">Select Alcohol</string>
    <string name="str_btnCalculate" translatable="true">Calculate Time</string>
    <string name="str_btnNext" translatable="true">Next</string>
    <string name="str_authors" translatable="true">Authors</string>

    <string name="str_selectAlcoholHeader" translatable="true">Select what you drank</string>
    <string name="str_txtAlcohol" translatable="true">Vodka 40%</string>
    <string name="str_txtAlcohol1" translatable="true">Vodka 38%</string>
    <string name="str_txtAlcohol2" translatable="true">Vodka 37.5%</string>
    <string name="str_txtAlcohol3" translatable="true">Wine 15%</string>
    <string name="str_txtAlcohol4" translatable="true">Wine 12%</string>
    <string name="str_txtAlcohol5" translatable="true">Wine 9.5%</string>
    <string name="str_txtAlcohol6" translatable="true">Beer 7%</string>
    <string name="str_txtAlcohol7" translatable="true">Beer 6%</string>
    <string name="str_txtAlcohol8" translatable="true">Beer 5.6%</string>
    <string name="str_txtAlcohol9" translatable="true">Beer 5.2%</string>
    <string name="str_incorrectValues" translatable="true">Provided values are incorrect</string>
    <string name="str_bacResult" translatable="true">Your Blood Alcohol Content is:</string>
    <string name="str_soberUpTime" translatable="true">You will sober up in:</string>
    <string name="str_SensorInstr" translatable="true">(after starting sensor wait 10 seconds to initialize and then blow intensely and steadily on the sensor for 5 seconds)</string>
    <string name="str_MainAlcoholInf" translatable="true">Select type and quantity of the consumed Alcohol</string>
    <string name="str_MainInstr" translatable="true">Choose one of three modes to calculate alcohol burning time</string>
    <string name="str_calibrating" translatable="true">Calibrating: </string>
    <string name="str_blow" translatable="true">Blow now! </string>
    <string name="str_DataReady" translatable="true">Data is ready</string>

</resources>
