<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnSensor"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="2dp"
                    android:background="@android:color/holo_orange_light"
                    android:minWidth="250dp"
                    android:text="@string/str_btnSensor" />

                <TextView
                    android:id="@+id/textAlcoholDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_enterAlcoholIntake"
                    tools:text="Enter Alcohol Intake:" />

                <EditText
                    android:id="@+id/txtEthanolIntake"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btnManual"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="2dp"
                    android:background="@android:color/holo_orange_light"
                    android:minWidth="250dp"
                    android:text="@string/str_btnManual" />

                <Button
                    android:id="@+id/btnSelectAlcohol"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="2dp"
                    android:background="@android:color/holo_orange_light"
                    android:minWidth="250dp"
                    android:text="@string/str_btnSelectAlcohol" />

                <ImageButton
                    android:id="@+id/btnInfo"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_dialog_info" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>