<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF3FB"
    tools:context=".SensorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:text="@tools:sample/cities" />

            <TextView
                android:id="@+id/dscEnterIP"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="#760099"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:text="@string/str_enterDeviceIP"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/txtIpAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:textColor="#760099"
                android:textStyle="bold"
                android:digits="0123456789."
                android:ems="10"
                android:inputType="number|numberDecimal"
                android:text="192.168.1.56"
                android:textAlignment="center"
                tools:text="192.168.1.56" />

            <Button
                android:id="@+id/btnStartSensor"
                android:layout_width="330dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/button_select"
                android:padding="20dp"
                android:drawableLeft="@drawable/sensor"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:text="@string/str_btnStartSensor" />

            <TextView
                android:id="@+id/SensorInstr"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="#760099"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/str_SensorInstr"
                tools:text="(after starting sensor wait 10 seconds to initialize and then blow intensely and steadily on the sensor for 5 seconds)"/>

            <Button
                android:id="@+id/btnFetchData"
                android:layout_width="330dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/button_select"
                android:padding="20dp"
                android:drawableLeft="@drawable/fetch"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:text="@string/str_btnFetchData" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>